--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,6 +2,7 @@ spring:
     application:
         name: version-checker-test
     datasource:
-        url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+        url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;INIT=RUNSCRIPT FROM 'classpath:db/migration/test/init_tests.sql';
 flyway:
   url: ${spring.datasource.url}
+  schemas: PUBLIC
